--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "src/styles.scss",
               "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           },
